<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditFromListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/edit_title"
            android:layout_width="227dp"
            android:layout_height="55dp"
            android:layout_marginTop="104dp"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="textPersonName"
            android:text="@string/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.363"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_desc_title"
            android:layout_width="249dp"
            android:layout_height="126dp"
            android:layout_marginTop="156dp"
            android:ems="10"
            android:hint="@string/descerption"
            android:inputType="textPersonName"
            android:text="@string/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.413"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/editBTn"
            android:layout_width="241dp"
            android:layout_height="49dp"
            android:layout_marginBottom="204dp"
            android:text="@string/edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/deleteBtn"
            android:layout_width="247dp"
            android:layout_height="59dp"
            android:layout_marginBottom="136dp"
            android:text="Delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.447"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/startDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="116dp"
            android:layout_marginBottom="272dp"
            tools:text="@string/change_date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/endBTn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end"
            tools:layout_editor_absoluteX="147dp"
            tools:layout_editor_absoluteY="634dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>